Preserve deterministic rule registration order